updates to csv files, changes for two interactive charts, including debt

--- a/ACS5_County.ipynb
+++ b/ACS5_County.ipynb
@@ -9,15 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install census"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -25,7 +16,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019_01_26_2000\n"
+      "Requirement already satisfied: census in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (0.8.12)\n",
+      "Requirement already satisfied: requests>=1.1.0 in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from census) (2.18.4)\n",
+      "Requirement already satisfied: future in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from census) (0.17.1)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=1.1.0->census) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=1.1.0->census) (2.6)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=1.1.0->census) (1.22)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\maden\\appdata\\local\\continuum\\anaconda3\\lib\\site-packages (from requests>=1.1.0->census) (2018.4.16)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "distributed 1.21.8 requires msgpack, which is not installed.\n",
+      "You are using pip version 10.0.1, however version 19.0.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install census"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019_01_27_1907\n"
      ]
     }
    ],
@@ -63,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +216,7 @@
        "4     55.098794  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +398,7 @@
        "max         406426.000000   1.688505e+06     65.146881  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +488,7 @@
        "4  California   CA"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +636,7 @@
        "4        21472.0     55.098794  Puerto Rico   PR  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +684,6 @@
        "      <th>Poverty Rate</th>\n",
        "      <th>State</th>\n",
        "      <th>abbr</th>\n",
-       "      <th>Unemployement Rate</th>\n",
        "      <th>Unemployment Rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -680,7 +702,6 @@
        "      <td>Puerto Rico</td>\n",
        "      <td>PR</td>\n",
        "      <td>0.094352</td>\n",
-       "      <td>0.094352</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -695,7 +716,6 @@
        "      <td>52.624591</td>\n",
        "      <td>Puerto Rico</td>\n",
        "      <td>PR</td>\n",
-       "      <td>0.065062</td>\n",
        "      <td>0.065062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -712,7 +732,6 @@
        "      <td>Puerto Rico</td>\n",
        "      <td>PR</td>\n",
        "      <td>0.073912</td>\n",
-       "      <td>0.073912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -728,7 +747,6 @@
        "      <td>Puerto Rico</td>\n",
        "      <td>PR</td>\n",
        "      <td>0.047110</td>\n",
-       "      <td>0.047110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -743,7 +761,6 @@
        "      <td>55.098794</td>\n",
        "      <td>Puerto Rico</td>\n",
        "      <td>PR</td>\n",
-       "      <td>0.084860</td>\n",
        "      <td>0.084860</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -765,22 +782,15 @@
        "3        39.5           16561.0            10775.0              7013.0   \n",
        "4        42.0           14275.0             8072.0              3307.0   \n",
        "\n",
-       "   Poverty Count  Poverty Rate        State abbr  Unemployement Rate  \\\n",
-       "0        19146.0     54.807775  Puerto Rico   PR            0.094352   \n",
-       "1         5945.0     52.624591  Puerto Rico   PR            0.065062   \n",
-       "2        12379.0     57.148793  Puerto Rico   PR            0.073912   \n",
-       "3        75187.0     50.507514  Puerto Rico   PR            0.047110   \n",
-       "4        21472.0     55.098794  Puerto Rico   PR            0.084860   \n",
-       "\n",
-       "   Unemployment Rate  \n",
-       "0           0.094352  \n",
-       "1           0.065062  \n",
-       "2           0.073912  \n",
-       "3           0.047110  \n",
-       "4           0.084860  "
+       "   Poverty Count  Poverty Rate        State abbr  Unemployment Rate  \n",
+       "0        19146.0     54.807775  Puerto Rico   PR           0.094352  \n",
+       "1         5945.0     52.624591  Puerto Rico   PR           0.065062  \n",
+       "2        12379.0     57.148793  Puerto Rico   PR           0.073912  \n",
+       "3        75187.0     50.507514  Puerto Rico   PR           0.047110  \n",
+       "4        21472.0     55.098794  Puerto Rico   PR           0.084860  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +838,7 @@
        "      <th>Poverty Rate</th>\n",
        "      <th>State</th>\n",
        "      <th>abbr</th>\n",
-       "      <th>Unemployement Rate</th>\n",
+       "      <th>Unemployment Rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -926,15 +936,15 @@
        "3        39.5           16561.0            10775.0              7013.0   \n",
        "4        42.0           14275.0             8072.0              3307.0   \n",
        "\n",
-       "   Poverty Count  Poverty Rate        State abbr  Unemployement Rate  \n",
-       "0        19146.0     54.807775  Puerto Rico   PR            0.094352  \n",
-       "1         5945.0     52.624591  Puerto Rico   PR            0.065062  \n",
-       "2        12379.0     57.148793  Puerto Rico   PR            0.073912  \n",
-       "3        75187.0     50.507514  Puerto Rico   PR            0.047110  \n",
-       "4        21472.0     55.098794  Puerto Rico   PR            0.084860  "
+       "   Poverty Count  Poverty Rate        State abbr  Unemployment Rate  \n",
+       "0        19146.0     54.807775  Puerto Rico   PR           0.094352  \n",
+       "1         5945.0     52.624591  Puerto Rico   PR           0.065062  \n",
+       "2        12379.0     57.148793  Puerto Rico   PR           0.073912  \n",
+       "3        75187.0     50.507514  Puerto Rico   PR           0.047110  \n",
+       "4        21472.0     55.098794  Puerto Rico   PR           0.084860  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,6 +954,13 @@
     "census_pd.to_csv(\"county_census_data.csv\", encoding=\"utf-8\", index=False)\n",
     "census_pd.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
